engine/include/oaa/oaa.h


#define OAA_MAX_CHANNELS 8
typedef enum {
  OAA_OK = 0,
  OAA_ERR_INVALID_ARGUMENT = -1,
  OAA_ERR_OUT_OF_MEMORY = -2,
  OAA_ERR_WRONG_STATE = -3,
  OAA_ERR_THREAD = -4,
  OAA_ERR_UNSUPPORTED = -5
} oaa_status;
typedef enum {
  OAA_SOURCE_SILENCE = 0,
  OAA_SOURCE_TEST_TONE = 1,
  OAA_SOURCE_DEVICE = 2,
  OAA_SOURCE_FILE = 3,
  OAA_SOURCE_PUSH = 4
} oaa_source_kind;
typedef struct oaa_snapshot {
  uint64_t generation;
  double elapsed_seconds;
  uint32_t sample_rate;
  uint32_t channels;
  uint32_t flags; 
  uint32_t dropped_frames;
  float lufs_momentary;  
  float lufs_short;      
  float lufs_integrated; 
  float lra;             
  float true_peak;       
  float true_peak_max;   
  float sample_peak_max; 
  float reserved1;
  float dr_short;       
  float dr_integrated;  
  float crest;
  float plr;            
  float psr;            
  float reserved2;
  float correlation; 
  float balance;     
  float peak[OAA_MAX_CHANNELS];    
  float rms[OAA_MAX_CHANNELS];     
  float vu[OAA_MAX_CHANNELS];      
  uint32_t clip[OAA_MAX_CHANNELS];
  float spectrum[OAA_SPECTRUM_BANDS];
  float spectrum_peak[OAA_SPECTRUM_BANDS];
  float lra_low;  
  float lra_high; 
  float lra_gate; 
  float reserved3;
  float spectrum_pan[OAA_SPECTRUM_BANDS];
  float scope[OAA_SCOPE_POINTS * 2];
  float histogram[OAA_HISTOGRAM_BINS];
} oaa_snapshot;
typedef struct oaa_device_info {
  char id[OAA_DEVICE_ID_MAX];
  char name[OAA_DEVICE_NAME_MAX];
  uint32_t channels;
  uint32_t sample_rate;
  uint32_t is_default;
  uint32_t is_loopback;
} oaa_device_info;
typedef struct oaa_device_list oaa_device_list;
OAA_API oaa_device_list *oaa_devices_enumerate(void);
OAA_API uint32_t oaa_device_list_count(const oaa_device_list *list);
OAA_API const oaa_device_info *oaa_device_list_at(const oaa_device_list *list,
                                                  uint32_t index);
OAA_API void oaa_device_list_free(oaa_device_list *list);
typedef struct oaa_config {
  uint32_t sample_rate; 
  uint32_t channels;    
  uint32_t source;       
  uint32_t block_frames; 
  const char *device_id;
} oaa_config;
typedef struct oaa_engine oaa_engine;
OAA_API int32_t oaa_abi_version(void);
OAA_API const char *oaa_version_string(void);
OAA_API void oaa_config_defaults(oaa_config *cfg);
OAA_API oaa_engine *oaa_engine_create(const oaa_config *cfg);
OAA_API void oaa_engine_destroy(oaa_engine *engine);
OAA_API int32_t oaa_engine_start(oaa_engine *engine);
OAA_API int32_t oaa_engine_stop(oaa_engine *engine);
OAA_API void oaa_engine_reset(oaa_engine *engine);
OAA_API void oaa_engine_set_silence_reset(oaa_engine *engine, int32_t enabled);
#define OAA_SILENCE_FLOOR 0.001f 
#define OAA_SILENCE_HOLD_SECONDS 2.0
OAA_API const oaa_snapshot *oaa_snapshot_buffer(oaa_engine *engine);
OAA_API uint64_t oaa_snapshot_acquire(oaa_engine *engine);
OAA_API int32_t oaa_engine_push(oaa_engine *engine, const float *interleaved,
                                uint32_t frames);
OAA_API const float *oaa_snapshot_peak(const oaa_snapshot *snapshot);
OAA_API const float *oaa_snapshot_rms(const oaa_snapshot *snapshot);
OAA_API const float *oaa_snapshot_vu(const oaa_snapshot *snapshot);
OAA_API const uint32_t *oaa_snapshot_clip(const oaa_snapshot *snapshot);
OAA_API const float *oaa_snapshot_spectrum(const oaa_snapshot *snapshot);
OAA_API const float *oaa_snapshot_spectrum_peak(const oaa_snapshot *snapshot);
OAA_API const float *oaa_snapshot_spectrum_pan(const oaa_snapshot *snapshot);
OAA_API const float *oaa_snapshot_scope(const oaa_snapshot *snapshot);
OAA_API const float *oaa_snapshot_histogram(const oaa_snapshot *snapshot);
typedef struct oaa_file_info {
  uint32_t sample_rate;
  uint32_t channels;
  uint64_t frames;
  double duration_seconds;
  uint32_t format; 
  uint32_t bits_per_sample;
} oaa_file_info;
typedef struct oaa_file oaa_file;
OAA_API oaa_file *oaa_file_open(const char *path);
OAA_API int32_t oaa_file_get_info(const oaa_file *file, oaa_file_info *out);
OAA_API uint64_t oaa_file_read(oaa_file *file, float *interleaved,
                               uint64_t frames);
OAA_API int32_t oaa_file_seek(oaa_file *file, uint64_t frame);
OAA_API void oaa_file_close(oaa_file *file);