packages/oaa_engine/lib/oaa_engine_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Enumerates capture devices. Returns NULL if the audio backend is
/// unavailable, which is a normal outcome on a headless machine and not an
/// error worth crashing over. Free with oaa_device_list_free.
@ffi.Native<ffi.Pointer<oaa_device_list> Function()>()
external ffi.Pointer<oaa_device_list> oaa_devices_enumerate();

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<oaa_device_list>)>()
external int oaa_device_list_count(ffi.Pointer<oaa_device_list> list);

@ffi.Native<
  ffi.Pointer<oaa_device_info> Function(
    ffi.Pointer<oaa_device_list>,
    ffi.Uint32,
  )
>()
external ffi.Pointer<oaa_device_info> oaa_device_list_at(
  ffi.Pointer<oaa_device_list> list,
  int index,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<oaa_device_list>)>()
external void oaa_device_list_free(ffi.Pointer<oaa_device_list> list);

/// ------------------------------------------------------------------------ */
/// /* Lifecycle                                                                 */
/// /* ------------------------------------------------------------------------
@ffi.Native<ffi.Int32 Function()>()
external int oaa_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> oaa_version_string();

/// Fills `cfg` with defaults. Call this before overriding fields, so that
/// adding a field to oaa_config does not silently leave it at zero in every
/// existing caller.
@ffi.Native<ffi.Void Function(ffi.Pointer<oaa_config>)>()
external void oaa_config_defaults(ffi.Pointer<oaa_config> cfg);

@ffi.Native<ffi.Pointer<oaa_engine> Function(ffi.Pointer<oaa_config>)>()
external ffi.Pointer<oaa_engine> oaa_engine_create(ffi.Pointer<oaa_config> cfg);

@ffi.Native<ffi.Void Function(ffi.Pointer<oaa_engine>)>()
external void oaa_engine_destroy(ffi.Pointer<oaa_engine> engine);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<oaa_engine>)>()
external int oaa_engine_start(ffi.Pointer<oaa_engine> engine);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<oaa_engine>)>()
external int oaa_engine_stop(ffi.Pointer<oaa_engine> engine);

/// Clears every integrating measurement — integrated loudness, LRA, all the
/// "max since reset" peaks, the clip counters — and restarts the elapsed clock.
/// Momentary values are left alone; they describe the signal, not the session.
@ffi.Native<ffi.Void Function(ffi.Pointer<oaa_engine>)>()
external void oaa_engine_reset(ffi.Pointer<oaa_engine> engine);

/// Reset automatically when the signal returns after a silence.
///
/// This is the engine's whole contribution to the LUFS time modes, and it is
/// here rather than above the engine because silence is a property of audio and
/// not of a host: one implementation serves a plugin in a DAW and a sound card
/// both, and two would eventually disagree about when a track began. The three
/// other modes need a playhead, so they are the caller's business — `engine/`
/// does not learn what a DAW is.
///
/// With this enabled, a block whose highest magnitude is below
/// OAA_SILENCE_FLOOR accumulates towards OAA_SILENCE_HOLD_SECONDS; the first
/// block above the floor once that has expired resets exactly as
/// oaa_engine_reset would, *before* that block is measured. Before rather than
/// after, because a track whose loudest sample is in its first block would
/// otherwise have that peak cleared by its own reset — a true-peak reading that
/// is wrong only for material that opens on a transient, which is most of it.
///
/// Off by default, and off is what every existing caller wants: file analysis
/// measures a file whole, and a reset in the middle of one would report a
/// different programme than the one that was asked for.
///
/// Idempotent, and safe to call while running.
@ffi.Native<ffi.Void Function(ffi.Pointer<oaa_engine>, ffi.Int32)>()
external void oaa_engine_set_silence_reset(
  ffi.Pointer<oaa_engine> engine,
  int enabled,
);

/// The stable address of this engine's snapshot. Valid from create() until
/// destroy(), and it never moves. Call it once and keep the pointer; the
/// contents are only meaningful after oaa_snapshot_acquire().
@ffi.Native<ffi.Pointer<oaa_snapshot> Function(ffi.Pointer<oaa_engine>)>()
external ffi.Pointer<oaa_snapshot> oaa_snapshot_buffer(
  ffi.Pointer<oaa_engine> engine,
);

/// Refresh the snapshot from the analysis thread and return its generation.
///
/// This is the only function called every frame, so it is the only one whose
/// cost is worth arguing about. It is a seqlock read: an atomic load, a memcpy
/// of the snapshot — about 15 kB, most of it the scope and the spectrum — and a
/// second atomic load to confirm no writer intervened. It never blocks the
/// analysis thread and it never waits on a mutex.
///
/// Fifteen kilobytes at 120 fps is under 2 MB/s and roughly a microsecond a
/// frame, which is the argument for copying the whole thing rather than growing
/// a second, narrower path for the modules that only want one number. Two ways
/// to read a measurement is two ways for them to disagree.
///
/// Returns the same value as the previous call when nothing new was published,
/// which is the caller's cue to skip repainting.
@ffi.Native<ffi.Uint64 Function(ffi.Pointer<oaa_engine>)>()
external int oaa_snapshot_acquire(ffi.Pointer<oaa_engine> engine);

/// Measure `frames` frames of interleaved float audio and publish the result.
///
/// Only valid when the engine was created with OAA_SOURCE_PUSH; anything else
/// returns OAA_ERR_WRONG_STATE rather than quietly mixing pushed audio into a
/// stream that a device is already driving.
///
/// Synchronous: on return the snapshot reflects these samples. Any block size is
/// accepted, and the measurements do not depend on it — the 400 ms and 3 s
/// windows are counted in samples internally, so pushing an hour in one call and
/// pushing it in 512-frame chunks produce identical readings. The conformance
/// suite relies on exactly that.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<oaa_engine>,
    ffi.Pointer<ffi.Float>,
    ffi.Uint32,
  )
>()
external int oaa_engine_push(
  ffi.Pointer<oaa_engine> engine,
  ffi.Pointer<ffi.Float> interleaved,
  int frames,
);

/// The address of each array field inside a snapshot.
///
/// These exist so that a consumer can build a typed view over the arrays
/// without knowing their byte offsets. dart:ffi can read the scalars through a
/// generated struct definition perfectly well, but the array fields need to
/// reach the canvas as a flat Float32List — `Canvas.drawRawPoints` and
/// `Vertices.raw` take one directly, and going through per-element accessors
/// instead would put 512 bounds-checked loads on the paint path where a single
/// pointer would do.
///
/// Asking the compiler for the offset rather than computing it in Dart is the
/// whole point. A struct layout that differs between the compiler that built
/// the library and the assumptions baked into the bindings does not crash — it
/// reads the wrong field and displays a plausible number, which is the failure
/// mode this project can least afford.
///
/// Call once, at startup, and keep the views: the snapshot never moves.
@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<oaa_snapshot>)>()
external ffi.Pointer<ffi.Float> oaa_snapshot_peak(
  ffi.Pointer<oaa_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<oaa_snapshot>)>()
external ffi.Pointer<ffi.Float> oaa_snapshot_rms(
  ffi.Pointer<oaa_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<oaa_snapshot>)>()
external ffi.Pointer<ffi.Float> oaa_snapshot_vu(
  ffi.Pointer<oaa_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Uint32> Function(ffi.Pointer<oaa_snapshot>)>()
external ffi.Pointer<ffi.Uint32> oaa_snapshot_clip(
  ffi.Pointer<oaa_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<oaa_snapshot>)>()
external ffi.Pointer<ffi.Float> oaa_snapshot_spectrum(
  ffi.Pointer<oaa_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<oaa_snapshot>)>()
external ffi.Pointer<ffi.Float> oaa_snapshot_spectrum_peak(
  ffi.Pointer<oaa_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<oaa_snapshot>)>()
external ffi.Pointer<ffi.Float> oaa_snapshot_spectrum_pan(
  ffi.Pointer<oaa_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<oaa_snapshot>)>()
external ffi.Pointer<ffi.Float> oaa_snapshot_scope(
  ffi.Pointer<oaa_snapshot> snapshot,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<oaa_snapshot>)>()
external ffi.Pointer<ffi.Float> oaa_snapshot_histogram(
  ffi.Pointer<oaa_snapshot> snapshot,
);

/// Opens `path`, a UTF-8 filename, and identifies its format. Returns NULL if
/// the file cannot be read or is not a format this build decodes — which is a
/// normal outcome for a user dropping an arbitrary file on the window, not an
/// error worth crashing over. Close with oaa_file_close.
///
/// The file is reported at its own sample rate and channel count, and nothing
/// resamples or remixes it: resampling in front of a measurement changes the
/// measurement. Configure the engine from oaa_file_get_info rather than the
/// other way round. A file with more than OAA_MAX_CHANNELS channels opens
/// successfully and reports its true channel count, so that the caller can say
/// what it found instead of guessing; the engine will refuse it.
@ffi.Native<ffi.Pointer<oaa_file> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<oaa_file> oaa_file_open(ffi.Pointer<ffi.Char> path);

@ffi.Native<
  ffi.Int32 Function(ffi.Pointer<oaa_file>, ffi.Pointer<oaa_file_info>)
>()
external int oaa_file_get_info(
  ffi.Pointer<oaa_file> file,
  ffi.Pointer<oaa_file_info> out,
);

/// Reads up to `frames` frames of interleaved float samples into `interleaved`,
/// which must have room for `frames * channels` floats. Returns the number of
/// frames actually read; 0 means end of file.
///
/// Sample values are not clamped. A float WAV may legitimately contain values
/// outside ±1.0, and clamping them here would destroy exactly the overshoots
/// true-peak metering exists to find.
@ffi.Native<
  ffi.Uint64 Function(ffi.Pointer<oaa_file>, ffi.Pointer<ffi.Float>, ffi.Uint64)
>()
external int oaa_file_read(
  ffi.Pointer<oaa_file> file,
  ffi.Pointer<ffi.Float> interleaved,
  int frames,
);

/// Seeks to `frame`. Returns OAA_ERR_UNSUPPORTED if the decoder could not seek,
/// which some malformed or streamed files will do.
///
/// Analysis never uses this — an integrating measurement over a file that was
/// seeked through is a measurement of a programme nobody played. It exists for
/// a future waveform view that needs to read a region without re-reading the
/// whole file.
@ffi.Native<ffi.Int32 Function(ffi.Pointer<oaa_file>, ffi.Uint64)>()
external int oaa_file_seek(ffi.Pointer<oaa_file> file, int frame);

@ffi.Native<ffi.Void Function(ffi.Pointer<oaa_file>)>()
external void oaa_file_close(ffi.Pointer<oaa_file> file);

/// ------------------------------------------------------------------------ */
/// /* Status codes                                                              */
/// /* ------------------------------------------------------------------------
enum oaa_status {
  OAA_OK(0),
  OAA_ERR_INVALID_ARGUMENT(-1),
  OAA_ERR_OUT_OF_MEMORY(-2),
  OAA_ERR_WRONG_STATE(-3),
  OAA_ERR_THREAD(-4),
  OAA_ERR_UNSUPPORTED(-5);

  final int value;
  const oaa_status(this.value);

  static oaa_status fromValue(int value) => switch (value) {
    0 => OAA_OK,
    -1 => OAA_ERR_INVALID_ARGUMENT,
    -2 => OAA_ERR_OUT_OF_MEMORY,
    -3 => OAA_ERR_WRONG_STATE,
    -4 => OAA_ERR_THREAD,
    -5 => OAA_ERR_UNSUPPORTED,
    _ => throw ArgumentError('Unknown value for oaa_status: $value'),
  };
}
